# EEG-Motor-Imagery-Classification

./: .gitignore  README.md  pyproject.toml
docs/: report.md
eeg_motor_imagery_classification/: __init__.py  cli.py  config.py  constants.py  data.py  eda.py  figures.py  model.py  preprocess.py  train.py  utils.py
eeg_motor_imagery_classification/data/: __init__.py  datasets.py  epochs.py  loaders.py  preprocessing.py  splits.py
eeg_motor_imagery_classification/evaluation/: __init__.py  metrics.py  protocols.py  statistics.py
eeg_motor_imagery_classification/experiments/: __init__.py  baseline_classical.py  baseline_eegnet.py  baseline_riemann.py  loso.py  riemann_protocols.py  transfer.py
eeg_motor_imagery_classification/features/: __init__.py  csp.py  fbcsp.py
eeg_motor_imagery_classification/models/: __init__.py  classical.py  eegnet.py  riemann.py
notebooks/: 01_quickstart.ipynb  02_results_overview.ipynb
tests/: __init__.py  test_figures.py  test_imports.py
